--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -531,10 +531,27 @@
             }
 
 
-            var biomass_val = feature.properties.cc_biomass;
-            var biomass_val = (biomass_val === null) ? 'Not sampled.' : roundUp(feature.properties.cc_biomass, 2);
-            var spring_biomass_val = feature.properties.spring_cc_biomass;
-            var spring_biomass_val = (spring_biomass_val === null) ? 'Not sampled.' : roundUp(feature.properties.spring_cc_biomass, 2);
+
+
+            var biomass_val = (feature.properties.cc_biomass === null) ? 'No value.' : roundUp(feature.properties.cc_biomass, 2);
+            var spring_biomass_val = (feature.properties.spring_cc_biomass === null) ? 'Not sampled.' : roundUp(feature.properties.spring_cc_biomass, 2);
+
+            var fall_gdu = (feature.properties.acc_gdd === null) ? 'No value.' : roundUp(feature.properties.acc_gdd, 2);
+            var spring_gdu = (feature.properties.spring_acc_gdd === null) ? 'No value.' : roundUp(feature.properties.spring_acc_gdd, 2);
+            var fall_precip = (feature.properties.total_precip === null) ? 'No value.' : roundUp(feature.properties.total_precip, 2);
+            var spring_precip = (feature.properties.spring_total_precip === null) ? 'No value.' : roundUp(feature.properties.spring_total_precip, 2);
+
+
+            var fall_sampling_notes = ""
+            var spring_sampling_notes = ""
+            if (feature.properties.fall_notes != null) {
+                console.log(feature.id)
+                fall_sampling_notes = "<dt>" + "Fall sampling notes" + "</dt> <dd>" + feature.properties.fall_notes + "</dd>"
+            }
+            if (feature.properties.spring_notes != null) {
+                spring_sampling_notes = "<dt>" + "Spring sampling notes" + "</dt> <dd>" + feature.properties.fall_notes + "</dd>"
+            }
+
             var image_1 = ""
             var image_2 = ""
             if (feature.properties.image_1_url != null) {
@@ -553,11 +570,15 @@
                 "<dt>Dominant soil texture</dt> <dd>" + feature.properties.dominant_soil_texture + "</dd>" +
 
                 "<dt>Fall Cumulative GDU </dt> <dd>" + feature.properties.acc_gdd + "</dd>" +
+                "<dt>Fall Precip (in) </dt> <dd>" + fall_precip + "</dd>" +
                 "<dt>Fall Biomass (ton DM/acre)</dt> <dd>" + biomass_val + "</dd>" +
+                fall_sampling_notes +
 
-                "<dt>Spring Cumulative GDU </dt> <dd>" + feature.properties.spring_acc_gdd + "</dd>" +
+
+                "<dt>Spring Cumulative GDU </dt> <dd>" + spring_gdu + "</dd>" +
+                "<dt>Spring Precip (in) </dt> <dd>" + spring_precip + "</dd>" +
                 "<dt>Spring Biomass (ton DM/acre)</dt> <dd>" + spring_biomass_val + "</dd>" +
-
+                spring_sampling_notes +
                 image_1 +
                 image_2 +
                 "</dl>"
