--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -7,64 +7,60 @@
 {% endblock %}
 
 {% block body %}
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a style="font-family: Helvetica" class="navbar-brand" href="{% url 'wisc_cc_home' %}">
-    Wisconsin Cover Crop Citizen Science Data Network
-  </a>
-
+  <a class="navbar-brand" href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Citizen Science Data Network</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-
-      <li class="nav-item" id="nav-home">
+      <li class="nav-item active">
         <a class="nav-link" href="{% url 'wisc_cc_home' %}">Home</a>
       </li>
-      <li class="nav-item" id="nav-graph">
+      <li class="nav-item">
         <a class="nav-link" href="{% url 'wisc_cc_graph' %}">Graph</a>
       </li>
-      <li class="nav-item" id="nav-map">
+      <li class="nav-item">
         <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
       </li>
-      <li class="nav-item" id="nav-survey">
+      <li class="nav-item">
         <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
       </li>
-      <li class="nav-item" id="nav-about">
+      <li class="nav-item">
         <a class="nav-link" href="{% url 'wisc_cc_about' %}">About</a>
       </li>
-
     </ul>
-    <span class="navbar-text">
-      <div class="collapse navbar-collapse" id="mainMenu">
 
-        {% if user.is_authenticated %}
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">
-              {{ user.email }}
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-              <a class="dropdown-item" href="{% url 'my_account'  %}">My account</a>
-              <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
-            </div>
-          </li>
-        </ul>
-        {% else %}
-        <form class="form-inline ml-auto">
-          <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-          <a href="{% url 'wisc_cc_signup' %}" class="btn btn-primary ml-2">Sign up</a>
-        </form>
-        {% endif %}
-      </div>
-    </span>
+    {% if user.is_authenticated %}
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          {{ user.email }}
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+          <a class="dropdown-item" href="{% url 'my_account'  %}">My account</a>
+          <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+        </div>
+      </li>
+    </ul>
+    {% else %}
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'wisc_cc_signup' %}" class="btn btn-outline-secondary">Sign up</a>
+      </li>
+    </ul>
+    {% endif %}
   </div>
+
 </nav>
+
 <br>
 <div class="container">
   <div class="row justify-content-center">
