--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -15,19 +15,19 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item" id="nav-home">
         <a class="nav-link" href="{% url 'wisc_cc_home' %}">Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" id="nav-graph">
         <a class="nav-link" href="{% url 'wisc_cc_graph' %}">Graph</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" id="nav-map">
         <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" id="nav-survey">
         <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" id="nav-about">
         <a class="nav-link" href="{% url 'wisc_cc_about' %}">About</a>
       </li>
     </ul>
@@ -97,7 +97,7 @@
     if (whichpage.includes("map")) {
       $("#nav-map").addClass("active");
     }
-    if (whichpage.includes("map")) {
+    if (whichpage.includes("about")) {
       $("#nav-about").addClass("active");
     }
 
