Have now redone map with a proper sidebar, mathing header navbar

--- a/wisccc/templates/wisccc/wisc_cc_register_2.html
+++ b/wisccc/templates/wisccc/wisc_cc_register_2.html
@@ -17,7 +17,7 @@
             <div class="card-body">
 
                 <h5>Welcome {{ user.username }}</h5>
-                <p>Please tell us a bit about yourself</p>
+                <p>Please tell us a bit about yourself.</p>
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <hr>
