--- a/wisccc/templates/wisccc/includes/survey_2024/form_section_4_planting_dates_timing_surveyfield_part_2.html
+++ b/wisccc/templates/wisccc/includes/survey_2024/form_section_4_planting_dates_timing_surveyfield_part_2.html
@@ -12,7 +12,12 @@
             {{ form_surveyfield_section_4_part_2.cover_crop_estimated_termination|as_crispy_field }}
         </div>
     </div>
+    <div class="form-row">
+        <div class="form-group col-md-10 mb-0">
+            {{ form_surveyfield_section_4_part_2.cover_crop_estimated_termination_write_in|as_crispy_field }}
+        </div>
 
+    </div>
 
     <div class="form-row">
         <div class="form-group col-md-5 mb-0">
