getting very close to completing rework of survey navigation to allow for greater manager editing flexibility

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -131,7 +131,7 @@
                 Hello Administrator!
               </div>
               <div class="card-body">
-                <a href="{% url 'wisc_cc_manager_home' %}" class="btn btn-primary">Manager page</a>
+                <a href="{% url 'wisc_cc_manager' %}" class="btn btn-primary">Manager page</a>
               </div>
             </div>
 
