--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -35,6 +35,11 @@
       <li class="nav-item" id="nav-about">
         <a class="nav-link" href="{% url 'wisc_cc_about' %}">About</a>
       </li>
+      {% if perms.wisccc.survery_manager %}
+      <li class="nav-item" id="nav-manager">
+        <a class="nav-link" href="{% url 'wisc_cc_manager' %}">Survey Manager</a>
+      </li>
+      {% endif %}
 
     </ul>
     <span class="navbar-text">
@@ -103,6 +108,9 @@
     }
     if (whichpage.includes("map")) {
       $("#nav-about").addClass("active");
+    }
+    if (whichpage.includes("manager")) {
+      $("#nav-manager").addClass("active");
     }
 
   }
