--- a/wisccc/templates/wisccc/update_column_response.html
+++ b/wisccc/templates/wisccc/update_column_response.html
@@ -1,1 +1,2 @@
-<a class="btn btn-info btn-sm" href="{% url 'update_response' record.id %}">Open</a>
+<a class="btn btn-info btn-sm"
+    href="{% url 'wisc_cc_survey' record.survey_year %}?farmer_id={{ record.farmer_id }}">Open</a>
