--- a/wisccc/templates/wisccc/survey_section_3_field_rotation_rates.html
+++ b/wisccc/templates/wisccc/survey_section_3_field_rotation_rates.html
@@ -28,7 +28,8 @@
 
 
   <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
-  <a href="{% url 'wisc_cc_survey' %}"><button type="button" class="btn btn-secondary">Back to survey home
+  <a href="{% url 'wisc_cc_survey' %}?farmer_id={{farmer_id}}"><button type="button" class="btn btn-secondary">Back to
+      survey home
       page</button></a>
 
 
