--- a/wisccc/templates/wisccc/survey_section_7_final_thoughts.html
+++ b/wisccc/templates/wisccc/survey_section_7_final_thoughts.html
@@ -19,7 +19,8 @@
   {% include 'wisccc/includes/survey_2024/form_section_7_final_thoughts_surveyfarm.html' %}
 
   <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
-  <a href="{% url 'wisc_cc_survey' %}"><button type="button" class="btn btn-secondary">Back to survey home
+  <a href="{% url 'wisc_cc_survey' %}?farmer_id={{ farmer_id }}"><button type="button" class="btn btn-secondary">Back to
+      survey home
       page</button></a>
 
 </form>
