--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -155,67 +155,68 @@
           {% endfor %}
 
           <div class="card">
-            <div class="card-header">
+            <div class="card-body">
+              <div class="list-group">
 
-              {% if one_incomplete %}
-              <a class="list-group-item list-group-item-action list-group-item-warning">
-                Please finish the survey for all your current fields before adding another field.
+                {% if one_incomplete %}
+                <a class="list-group-item list-group-item-action list-group-item-warning">
+                  Please finish the survey for all your current fields before adding another field.
+                </a>
+                {% else %}
+                <a href="{% url 'create_addtl_surveyfield' survey_farm.id %}"
+                  class="list-group-item list-group-item-action list-group-item-success">
+                  Add another field to this survey. Please note support for sampling this additional field may not be
+                  available.
+                </a>
+
+                {% endif %}
+              </div>
+            </div>
+
+            <div class="list-group">
+              {% if survey_farm.encourage_cc is not None %}
+              <a href="{% url 'wisc_cc_survey7' survey_farm.id %}"
+                class="list-group-item list-group-item-action list-group-item-success">
+                VII. Final thoughts - completed! Click to edit your response.
               </a>
               {% else %}
-              <a href="{% url 'create_addtl_surveyfield' survey_farm.id %}"
-                class="list-group-item list-group-item-action list-group-item-success">
-                Add another field to this survey. Please note support for sampling this additional field may not be
-                available.
+              <a href="{% url 'wisc_cc_survey7' survey_farm.id %}"
+                class="list-group-item list-group-item-action list-group-item-warning">
+                VII. Final thoughts
               </a>
-
               {% endif %}
+
             </div>
           </div>
+          <hr>
+          {% if perms.wisccc.survery_manager %}
+          <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <h3 class="card-title">Reviewer notes and accuracy confirmation</h3>
+            <div class="form-row">
+              <div class="form-group col-md-12 mb-0">
+                {{ form_surveyfarm_review.notes_admin|as_crispy_field }}
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-12 mb-0">
+                {{ form_surveyfarm_review.confirmed_accurate|as_crispy_field }}
+              </div>
+            </div>
 
-          <div class="list-group">
-            {% if survey_farm.encourage_cc is not None %}
-            <a href="{% url 'wisc_cc_survey7' survey_farm.id %}"
-              class="list-group-item list-group-item-action list-group-item-success">
-              VII. Final thoughts - completed! Click to edit your response.
+            <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
+            <a href="{% url 'response_table' %}">
+              <button type="button" class="warn btn btn-secondary">
+                Back to survey response table
+              </button>
             </a>
-            {% else %}
-            <a href="{% url 'wisc_cc_survey7' survey_farm.id %}"
-              class="list-group-item list-group-item-action list-group-item-warning">
-              VII. Final thoughts
-            </a>
-            {% endif %}
 
-          </div>
-        </div>
-        <hr>
-        {% if perms.wisccc.survery_manager %}
-        <form method="post" enctype="multipart/form-data">
-          {% csrf_token %}
-          <h3 class="card-title">Reviewer notes and accuracy confirmation</h3>
-          <div class="form-row">
-            <div class="form-group col-md-12 mb-0">
-              {{ form_surveyfarm_review.notes_admin|as_crispy_field }}
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group col-md-12 mb-0">
-              {{ form_surveyfarm_review.confirmed_accurate|as_crispy_field }}
-            </div>
-          </div>
-
-          <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
-          <a href="{% url 'response_table' %}">
-            <button type="button" class="warn btn btn-secondary">
-              Back to survey response table
-            </button>
-          </a>
-
-        </form>
-        {% endif %}
-        <br>
+          </form>
+          {% endif %}
+          <br>
 
 
-        <!-- <div class="card-footer text-muted text-center">
+          <!-- <div class="card-footer text-muted text-center">
           Questions? See our <a href="#">references page</a>
           
           <ul class="nav justify-content-end">
@@ -224,8 +225,8 @@
             </li>
           </ul>
         </div> -->
+        </div>
       </div>
     </div>
   </div>
-</div>
-{% endblock %}
+  {% endblock %}
