wording tweak to about

--- a/wisccc/templates/wisccc/wisc_cc_about.html
+++ b/wisccc/templates/wisccc/wisc_cc_about.html
@@ -75,14 +75,14 @@
                         cover cropping experiments and experience, including crops planted, dates,
                         seeding rates, fertility management and tillage.
                         We also ask about key sources of information and motivations to cover crop.
-                        Beginning in Fall 2024, we provided participating farmers with a sampling kit, with a pvc pipe
-                        2x2 foot quadrat and clippers, along with instructions on how to cut a representative sample of
-                        a fall cover crop
-                        at the soil surface.
+                        Beginning in fall 2023, participating farmers received a sampling kit, with a 2x2 quadrat of pvc
+                        pipe
+                        and clippers, along with instructions on how to cut a representative cover crop sample at the
+                        soil surface.
                         Any weeds present are not separated from the samples.
-                        We also include a scale and pre-addressed envelopes so
-                        that plant samples can be weighed in the field and then easily
-                        shipped to labs for a biomass estimate as well as nutrient and forage analysis.
+                        Farmers sample in the fall and again in the spring.
+                        The kit includes a scale and pre-addressed envelopes so that samples can be weighed in the field
+                        and shipped to labs for biomass estimates and nutrient analyses.
                         At the end of the growing season we provide participants with
                         $100 honorarium as well as their personal biomass estimates and
                         nutrient information.
