modified homepage for interest form

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -53,7 +53,7 @@
 
         </div>
         <div class="card-group">
-          <!-- <a href="#"> -->
+          <!-- <a href="{% url 'wisc_cc_interested' %}"> -->
           <div class="card">
             <img class="card-img-top" src="{% static 'img/checking_corn.jpg' %}"
               alt="Lafayette county agronomist checking corn emergence and planting depth">
@@ -61,11 +61,11 @@
               <h5 class="card-title">Interested in participating?</h5>
               <p class="card-text">
                 Registration closed for 2024-5.
-                If you would like to learn more or participate in the future please email <a
-                  href="mailto:mingram@wisc.edu">Mrill Ingram at mingram@wisc.edu</a>.
+                If you would like to learn more or participate in the future please let click here or email
+                <a href="mailto:mingram@wisc.edu">Mrill Ingram</a> with any questions.
               </p>
 
-              <!-- <a href="{% url 'wisc_cc_register_1' %}" class="btn btn-primary">Register here!</a> -->
+              <a href="{% url 'wisc_cc_interested' %}" class="btn btn-primary">Interested?</a>
             </div>
           </div>
           <!-- </a> -->
