home page wording tweak

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -60,9 +60,10 @@
             <div class="card-body">
               <h5 class="card-title">Interested in participating?</h5>
               <p class="card-text">
-                Registration closed for 2024-5.
-                If you would like to learn more or participate in the future please let click here or email
-                <a href="mailto:mingram@wisc.edu">Mrill Ingram</a> with any questions.
+                Registration closed is for 2024-5.
+                If you would like to learn more or participate in the future please email <a
+                  href="mailto:mingram@wisc.edu">Mrill Ingram</a>
+                or click below to share your contact information.
               </p>
 
               <a href="{% url 'wisc_cc_interested' %}" class="btn btn-primary">Interested?</a>
