--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -67,7 +67,7 @@
 </nav>
 <br>
 <div class="container">
-  <div class="row justify-content-center">
+  <!-- <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
       <div class="card">
         <div class="card-body">
@@ -79,7 +79,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   {% block content %}
   {% endblock content%}
