removing another @wisc

--- a/wisccc/templates/wisccc/wisc_cc_register_3.html
+++ b/wisccc/templates/wisccc/wisc_cc_register_3.html
@@ -22,9 +22,14 @@
                     Welcome! Thank you for joining the Wisconsin Cover Crop Citizen Science Data Network.
                     We will be in touch soon with more information on the survey and cover crop sampling,
                     both of which happen in the Fall.
-                    Please reach out to Dan Marzu at
-                    <a href="mailto:dan.marzu@wisc.edu">dan.marzu@wisc.edu</a>
-                    or Mrill Ingram at <a href="mailto:mingram@wisc.edu">mingram@wisc.edu</a>
+                    Please reach out to
+                    <a href="mailto:dan.marzu@wisc.edu">
+                        Dan Marzu at
+                    </a>
+                    or
+                    <a href="mailto:mingram@wisc.edu">
+                        Mrill Ingram
+                    </a>
                     with any questions.
                 </p>
                 <a href="{% url 'wisc_cc_home' %}">
