--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -79,144 +79,155 @@
           {% for survey_field_id, dict_vals in dict_survey_fields.items %}
 
           <div class="card">
-            <div class="card-header" id="headingOne">
+            <!-- <div class="card-header" id="headingOne"> -->
+            <div class="card-body">
               {% if dict_vals.is_completed %}
-              <button class="btn btn-success btn-block text-left" type="button" data-toggle="collapse"
-                data-target="#collapse-{{ forloop.counter }}" aria-expanded="true" aria-controls="collapseOne">
+
+              <a data-target="#collapse-{{ forloop.counter }}" data-toggle="collapse" aria-expanded="true"
+                aria-controls="collapseOne" class="list-group-item list-group-item-action list-group-item-success">
                 Field {{ forloop.counter }} click to see sections
-              </button>
+              </a>
+
               {% else %}
-              <button class="btn btn-warning btn-block text-left" type="button" data-toggle="collapse"
-                data-target="#collapse-{{ forloop.counter }}" aria-expanded="true" aria-controls="collapseOne">
-                Field {{ forloop.counter }} click to see sections
-              </button>
+
+              <a data-target="#collapse-{{ forloop.counter }}" data-toggle="collapse" aria-expanded="true"
+                aria-controls="collapseOne" class="list-group-item list-group-item-action list-group-item-warning">
+                Field {{ forloop.counter }}
+              </a>
+
               {% endif %}
 
             </div>
 
-            <div id="collapse-{{ forloop.counter }}" class="collapse" aria-labelledby="headingOne"
-              data-parent="#accordionExample">
-              <div class="card-body">
-                <div class="list-group">
-                  {% if dict_vals.section_3 %}
-                  <a href="{% url 'wisc_cc_survey3' survey_field_id %}"
-                    class="list-group-item list-group-item-action list-group-item-success">
-                    III. Research Field: Crop rotation and planting rates - completed! Click to edit your response.
-                  </a>
-                  {% else %}
-                  <a href="{% url 'wisc_cc_survey3' survey_field_id %}"
-                    class="list-group-item list-group-item-action list-group-item-warning">
-                    III. Research Field: Crop rotation and planting rates
-                  </a>
-                  {% endif %}
+            {% if dict_vals.is_completed %}
+
+            <div id="collapse-{{ forloop.counter }}" aria-labelledby="headingOne" data-parent="#accordionExample"
+              class="collapse">
+              {% else %}
+              <div id="collapse-{{ forloop.counter }}" aria-labelledby="headingOne" data-parent="#accordionExample"
+                class="collapse show">
+                {% endif %}
+                <div class="card-body">
+                  <div class="list-group">
+                    {% if dict_vals.section_3 %}
+                    <a href="{% url 'wisc_cc_survey3' survey_field_id %}"
+                      class="list-group-item list-group-item-action list-group-item-success">
+                      III. Research Field: Crop rotation and planting rates - completed! Click to edit your response.
+                    </a>
+                    {% else %}
+                    <a href="{% url 'wisc_cc_survey3' survey_field_id %}"
+                      class="list-group-item list-group-item-action list-group-item-warning">
+                      III. Research Field: Crop rotation and planting rates
+                    </a>
+                    {% endif %}
 
 
-                  {% if dict_vals.section_4 %}
-                  <a href="{% url 'wisc_cc_survey4' survey_field_id %}"
-                    class="list-group-item list-group-item-action list-group-item-success">
-                    IV. Research Field: Planting dates & timing - completed! Click to edit your response.
-                  </a>
-                  {% else %}
-                  <a href="{% url 'wisc_cc_survey4' survey_field_id %}"
-                    class="list-group-item list-group-item-action list-group-item-warning">
-                    IV. Research Field: Planting dates & timing
-                  </a>
-                  {% endif %}
+                    {% if dict_vals.section_4 %}
+                    <a href="{% url 'wisc_cc_survey4' survey_field_id %}"
+                      class="list-group-item list-group-item-action list-group-item-success">
+                      IV. Research Field: Planting dates & timing - completed! Click to edit your response.
+                    </a>
+                    {% else %}
+                    <a href="{% url 'wisc_cc_survey4' survey_field_id %}"
+                      class="list-group-item list-group-item-action list-group-item-warning">
+                      IV. Research Field: Planting dates & timing
+                    </a>
+                    {% endif %}
 
-                  {% if dict_vals.section_5 %}
-                  <a href="{% url 'wisc_cc_survey5' survey_field_id %}"
-                    class="list-group-item list-group-item-action list-group-item-success">
-                    V. Research Field: Manure, tillage, soil conditions - completed! Click to edit your response.
-                  </a>
-                  {% else %}
-                  <a href="{% url 'wisc_cc_survey5' survey_field_id %}"
-                    class="list-group-item list-group-item-action list-group-item-warning">
-                    V. Research Field: Manure, tillage, soil conditions
-                  </a>
-                  {% endif %}
+                    {% if dict_vals.section_5 %}
+                    <a href="{% url 'wisc_cc_survey5' survey_field_id %}"
+                      class="list-group-item list-group-item-action list-group-item-success">
+                      V. Research Field: Manure, tillage, soil conditions - completed! Click to edit your response.
+                    </a>
+                    {% else %}
+                    <a href="{% url 'wisc_cc_survey5' survey_field_id %}"
+                      class="list-group-item list-group-item-action list-group-item-warning">
+                      V. Research Field: Manure, tillage, soil conditions
+                    </a>
+                    {% endif %}
 
-                  {% if dict_vals.section_6 %}
-                  <a href="{% url 'wisc_cc_survey6' survey_field_id %}"
-                    class="list-group-item list-group-item-action list-group-item-success">
-                    VI. Research Field: Cover crop seeding & cost - completed! Click to edit your response.
-                  </a>
-                  {% else %}
-                  <a href="{% url 'wisc_cc_survey6' survey_field_id %}"
-                    class="list-group-item list-group-item-action list-group-item-warning">
-                    VI. Research Field: Cover crop seeding & cost
-                  </a>
-                  {% endif %}
+                    {% if dict_vals.section_6 %}
+                    <a href="{% url 'wisc_cc_survey6' survey_field_id %}"
+                      class="list-group-item list-group-item-action list-group-item-success">
+                      VI. Research Field: Cover crop seeding & cost - completed! Click to edit your response.
+                    </a>
+                    {% else %}
+                    <a href="{% url 'wisc_cc_survey6' survey_field_id %}"
+                      class="list-group-item list-group-item-action list-group-item-warning">
+                      VI. Research Field: Cover crop seeding & cost
+                    </a>
+                    {% endif %}
 
+                  </div>
                 </div>
               </div>
+
             </div>
+            {% endfor %}
 
-          </div>
-          {% endfor %}
+            <div class="card">
+              <div class="card-body">
+                <div class="list-group">
 
-          <div class="card">
-            <div class="card-body">
+                  {% if one_incomplete %}
+                  <a class="list-group-item list-group-item-action list-group-item-warning">
+                    Please finish the survey for all your current fields before adding another field.
+                  </a>
+                  {% else %}
+                  <a href="{% url 'create_addtl_surveyfield' survey_farm.id %}"
+                    class="list-group-item list-group-item-action list-group-item-success">
+                    Add another field to this survey. Please note support for sampling this additional field may not be
+                    available.
+                  </a>
+
+                  {% endif %}
+                </div>
+              </div>
+
               <div class="list-group">
-
-                {% if one_incomplete %}
-                <a class="list-group-item list-group-item-action list-group-item-warning">
-                  Please finish the survey for all your current fields before adding another field.
+                {% if survey_farm.encourage_cc is not None %}
+                <a href="{% url 'wisc_cc_survey7' survey_farm.id %}"
+                  class="list-group-item list-group-item-action list-group-item-success">
+                  VII. Final thoughts - completed! Click to edit your response.
                 </a>
                 {% else %}
-                <a href="{% url 'create_addtl_surveyfield' survey_farm.id %}"
-                  class="list-group-item list-group-item-action list-group-item-success">
-                  Add another field to this survey. Please note support for sampling this additional field may not be
-                  available.
+                <a href="{% url 'wisc_cc_survey7' survey_farm.id %}"
+                  class="list-group-item list-group-item-action list-group-item-warning">
+                  VII. Final thoughts
                 </a>
-
                 {% endif %}
+
               </div>
             </div>
+            <hr>
+            {% if perms.wisccc.survery_manager %}
+            <form method="post" enctype="multipart/form-data">
+              {% csrf_token %}
+              <h3 class="card-title">Reviewer notes and accuracy confirmation</h3>
+              <div class="form-row">
+                <div class="form-group col-md-12 mb-0">
+                  {{ form_surveyfarm_review.notes_admin|as_crispy_field }}
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-group col-md-12 mb-0">
+                  {{ form_surveyfarm_review.confirmed_accurate|as_crispy_field }}
+                </div>
+              </div>
 
-            <div class="list-group">
-              {% if survey_farm.encourage_cc is not None %}
-              <a href="{% url 'wisc_cc_survey7' survey_farm.id %}"
-                class="list-group-item list-group-item-action list-group-item-success">
-                VII. Final thoughts - completed! Click to edit your response.
+              <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
+              <a href="{% url 'response_table' %}">
+                <button type="button" class="warn btn btn-secondary">
+                  Back to survey response table
+                </button>
               </a>
-              {% else %}
-              <a href="{% url 'wisc_cc_survey7' survey_farm.id %}"
-                class="list-group-item list-group-item-action list-group-item-warning">
-                VII. Final thoughts
-              </a>
-              {% endif %}
 
-            </div>
-          </div>
-          <hr>
-          {% if perms.wisccc.survery_manager %}
-          <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <h3 class="card-title">Reviewer notes and accuracy confirmation</h3>
-            <div class="form-row">
-              <div class="form-group col-md-12 mb-0">
-                {{ form_surveyfarm_review.notes_admin|as_crispy_field }}
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-12 mb-0">
-                {{ form_surveyfarm_review.confirmed_accurate|as_crispy_field }}
-              </div>
-            </div>
-
-            <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
-            <a href="{% url 'response_table' %}">
-              <button type="button" class="warn btn btn-secondary">
-                Back to survey response table
-              </button>
-            </a>
-
-          </form>
-          {% endif %}
-          <br>
+            </form>
+            {% endif %}
+            <br>
 
 
-          <!-- <div class="card-footer text-muted text-center">
+            <!-- <div class="card-footer text-muted text-center">
           Questions? See our <a href="#">references page</a>
           
           <ul class="nav justify-content-end">
@@ -225,8 +236,8 @@
             </li>
           </ul>
         </div> -->
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  {% endblock %}
+    {% endblock %}
